--- a/docassemble/FeeWaiver/data/questions/fee_waiver.yml
+++ b/docassemble/FeeWaiver/data/questions/fee_waiver.yml
@@ -47,6 +47,7 @@ mandatory: True
 code: |
   nav.set_section('section_intro')
   sees_nav_bar
+  snapshot_start
   #IL_fee_waiver_intro
   set_progress(5)
   how_to_use
@@ -108,13 +109,37 @@ code: |
 
   set_progress(90)
   e_signature
-  bring_docs
   court_choice
+  bring_docs
   #saw_signature_choice
 
   set_progress(100)
   nav.set_section('section_download')
+  snapshot_forms
   get_docs_screen
+---
+code: |
+  stuff_to_snapshot = {
+  	'start_time': str(current_datetime().format_datetime()),
+  	'started_interview': True, 
+  	}
+    
+  stuff_to_snapshot['zip'] = showifdef('users[0].address.zip')
+
+  stuff_to_snapshot['downloaded_forms'] = showifdef('bring_docs')
+  
+  store_variables_snapshot(
+  	data=stuff_to_snapshot, persistent=True
+  	)
+  snapshot_interview_state = True
+---
+code: |
+  snapshot_interview_state
+  snapshot_start = True  
+---
+code: |
+  reconsider('snapshot_interview_state')
+  snapshot_forms = True
 ---
 id: trial court county
 continue button field: case_county
@@ -1317,10 +1342,6 @@ fields:
     show if: 
       variable: x.has_email_address
       is: True
-validation code: |
-  if (not showifdef('x.phone_number') and \
-      (x.has_email_address == False)):
-    validation_error(word("Please enter at least one contact method."), field="x.other_contact_method")
 ---
 template: contact_info_help
 subject: |
@@ -1408,7 +1429,7 @@ fields:
 ---
 template: long_name_help
 subject: |
-  **What if the person's name doesn't fit into 4 fields?**
+  **What if I need more space?**
 content: |
   If the party has a long name like "Jane Smith, Director of Housing," select **Business or organization**. You can then enter the full name and title.
 ---
@@ -1646,9 +1667,9 @@ id: court choice
 question: |
   If the judge has questions about the Fee waiver application, how do you want to attend court?
 subquestion: |
-  You might already have a court date scheduled.
+  You might already have a court date scheduled in your case.
   
-  Some courts may ask for a separate court date for more information about your Fee waiver application. You might not get your choice, but you can say what you want on your Fee waiver application.
+  Some courts may schedule a separate court date to ask for more information about your Fee waiver application. You might not get your choice, but you can say if you want to attend court for the fee waiver remotely or in person. 
 
   The Circuit Clerk should give you details about how to attend court. 
 fields:
@@ -1661,13 +1682,17 @@ fields:
 id: bring documents
 continue button field: bring_docs
 question: |
-  Be prepared
+  Supporting documents
 subquestion: |
-  After you file your Fee waiver application, the judge will review it. If they have questions, you may need to give more information or documentation. For example, you may be asked to show:
+  After you file your Fee waiver application, a judge will review it. If they have questions, you may need to give more information or documentation. For example, you may be asked to show:
   
   * Proof of public benefits received,
   * Proof of income, and
   * The value of any belongings.
+  
+  **Note:** Some courts require that you submit proof of benefits or income when you file your Fee waiver application. If you are e-filing, you may need to upload proof of benefits or income.
+  
+  Ask your Circuit Clerk what they require. You can look up how to contact them on the [**Illinois Courts website**](https://www.illinoiscourts.gov/courts-directory/interactive-map/by-court-type).
   
   If you have a court date for your Fee waiver application, be sure to bring whatever documentation is requested.
 ---
